# System-Programmig-with-Linux

./: README.md  fork2.c  fork4.c  pid1.c  shell1.c  uid_gid.c
Lecture 22/: a.out  file.txt  my_shell.c  script.sh  shell2.c  shell3.c  shell4.c
Lecture05/prog3/: CMakeLists.txt
Lecture05/prog3/man/: add.3
Lecture07/: AUTHOR  myadd.c  mymath.h  mysub.c  prog.c  temp
Lecture08/: Prog.c  _exit.c  atexit.c  atexit2.c  nofile_limit.c  on_exit.c
Lecture09/: a.out  buff_overflow.c  buff_overflow2.c  bye  comm_ln_arg.c  env_his.c  goto1.c  goto2.c
Lecture10/: a.out  allocate_block.c  bugs.c  faulty_program.c  heapfiller.c  sbrk.c
Lecture11/: a.out  copy  file2.txt  long.txt  more0.c  more1.c  more2.c  more4.c  more5.c
Lecture13/: abc.txt  access.c  dup.c  fcntl_lock.c  filewithholes  list_arg.c  lseek1.c  lseek2.c  lseek3.c  stdin_redirect2.c
Lecture14/: a.out  file_info.c  file_permission.c  file_type.c  gid_name.c  ls_0.c  ls_2.c  myread_dir.c
Lecture15/: copy.c  who_0.c  who_1.c  who_2.c
Lecture16/: 0  a.out  echo_state.c  my_cat.c  my_write.c  passwd_getatt.c  passwd_ioctl.c  simple_passwd.c  system_passwd.c
Lecture17/: a.out  fork1.c  fork3.c  fork_file.c  process_chain.c  process_fan.c  process_tree.c  set_uid_pid.c
Lecture18/: a.out  orphan.c  vfork1.c  vfork2.c  vfork3.c  wait1.c  wait2.c  wait3.c  wait4.c  wait5.c  wait_pid.c  zombi.c
Lecture19/: a.out  execle.c  execlp.c  execute.c  execv.c  exit_exec.c  exit_fork.c  system1.c  system2.c  system3.c  system_exec.c
Lecture20/: a.out  system_process.py  systemd.c
Lecture21/: a.out  (+4 more)
(+122 files in other folders)
